<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">World Location</string>
	<string name="hello">Hello World, AndroidHTActivity!</string>
	<string name="Latitud">Latitud:</string>
    <string name="Longitud">Longitud:</string>
    <string name="CantidadAct">Actualizaciones:</string>
    <string name="Altitud">Altitud:</string>
    <string name="Velocidad">Velocidad:</string>
    <string name="Imei">Imei:</string>
    <string name="Battery">Battery:</string>
    <string name="Code">Code:</string>
    <string name="checkboxrastreo">Monitoring</string>
    <string name="checkboxnearlocation">Near Location</string>
    
    
</resources>

