<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:text="@string/Latitud" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Longitud" />
    <TextView
        android:id="@+id/CantidadAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CantidadAct" />

    <TextView
        android:id="@+id/Altitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Altitud" />

    <TextView
        android:id="@+id/Velocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Velocidad" />

    <TextView
        android:id="@+id/imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Imei" />
    
        <TextView
        android:id="@+id/BatteryID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Battery" />
    
        <TextView
        android:id="@+id/CodeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Code" />
        
</LinearLayout>